--- a/index.html
+++ b/index.html
@@ -1,35 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Neil deGrasse Tyson</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Project One</title>
 </head>
-  <body>
-  
-    <h1>Neil deGrasse Tyson</h1>
-    
-    <img src="assets/neilTyson.jpg" alt="">
-
-    <p>Age: 59 years</p>
-    <p>Hometown: The Bronx, New York</p>
-    <p>Bio: Neil deGrasse Tyson is an American astrophysicist and director of the hayden Planetarium in New York. 
-      He grew up in the Bronx, and studied at Harvard University, the University of Texas at Austin. and Columbia University. 
-      He joined Hayden Planetarium as a staff scientist in 1994, and became director in 1996. He hosted the show Cosmos: A Spacetime Odyssey (2014), 
-      which succeeded Carl Sagan's Cosmos: A Personal Voyage (1980) and received ctitical acclaim.</p>
-
-    <h3>Achievements</h3>
-    <ul>
-
-        <p>Sexiest Astrophysicist Alive from People Magazine (2000)</p>
-        <p>Medal of Excellence from Columbia University, New York City (2001)</p>
-        <p>Stephen Hawking Medal for Sience Communications (2017)</p>
-
-    </ul>
-
-    <a href="https://en.wikipedia.org/wiki/Neil_deGrasse_Tyson">Neil deGrasse Tyson's Wikipedia</a>
-    
-
-  </body>
+<body>
+    <h1>Hello World</h1>
+</body>
 </html>
