--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <img src="assets/neilTyson.jpg" alt="">
 
-    <p>Age: 59 years</p>
+    <p>Age: 59 years!</p>
     <p>Hometown: The Bronx, New York</p>
     <p>Bio: Neil deGrasse Tyson is an American astrophysicist and director of the hayden Planetarium in New York. 
       He grew up in the Bronx, and studied at Harvard University, the University of Texas at Austin. and Columbia University. 
