--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-    <link rel="stylesheet" href="documents/class.css">
+    <link rel="stylesheet" href="class.css">
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,29 +10,35 @@
   <title>Neil deGrasse Tyson</title>
 </head>
   <body>
-  
-    <h1>Neil deGrasse Tyson</h1>
-    
-    <img src="assets/neilTyson.jpg" alt="">
 
-    <p>Age: 59 years!</p>
-    <p>Hometown: The Bronx, New York</p>
-    <p>Bio: Neil deGrasse Tyson is an American astrophysicist and director of the hayden Planetarium in New York. 
-      He grew up in the Bronx, and studied at Harvard University, the University of Texas at Austin. and Columbia University. 
-      He joined Hayden Planetarium as a staff scientist in 1994, and became director in 1996. He hosted the show Cosmos: A Spacetime Odyssey (2014), 
-      which succeeded Carl Sagan's Cosmos: A Personal Voyage (1980) and received ctitical acclaim.</p>
+    <header>
 
-    <h3>Achievements</h3>
-    <ul>
+        <h1>Neil deGrasse Tyson</h1>
+        <img src="assets/neilTyson.jpg" alt="" class="image">
+    </header>
 
-        <p>Sexiest Astrophysicist Alive from People Magazine (2000)</p>
-        <p>Medal of Excellence from Columbia University, New York City (2001)</p>
-        <p>Stephen Hawking Medal for Sience Communications (2017)</p>
+    <section class="content">
 
-    </ul>
+          <h4>Age</h4>
+            <p>59 years</p>
+          <h4>Hometown</h4>
+            <p>The Bronx, New York</p>
+          <h4>Bio</h4>
+            <p>Neil deGrasse Tyson is an American astrophysicist and director of the hayden Planetarium in New York.
+              He grew up in the Bronx, and studied at Harvard University, the University of Texas at Austin. and Columbia University.
+              He joined Hayden Planetarium as a staff scientist in 1994, and became director in 1996. He hosted the show Cosmos: A Spacetime Odyssey (2014),
+              which succeeded Carl Sagan's Cosmos: A Personal Voyage (1980) and received ctitical acclaim.</p>
 
-    <a href="https://en.wikipedia.org/wiki/Neil_deGrasse_Tyson">Neil deGrasse Tyson's Wikipedia</a>
-    
+          <h3>Achievements</h3>
 
+            <ul>
+                <li>Sexiest Astrophysicist Alive from People Magazine (2000)</li>
+                <li>Medal of Excellence from Columbia University, New York City (2001)</li>
+                <li>Stephen Hawking Medal for Sience Communications (2017)</li>
+                </ul>
+
+          <a href="https://en.wikipedia.org/wiki/Neil_deGrasse_Tyson" class="link">Neil deGrasse Tyson's Wikipedia</a>
+
+    </section>
   </body>
 </html>
